--- a/app/src/main/res/layout/fragment_train.xml
+++ b/app/src/main/res/layout/fragment_train.xml
@@ -26,38 +26,82 @@
 
         <TextView
             android:textColor="@color/progressColor"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:id="@+id/textview_n"
             android:padding="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:textAlignment="center"
             android:layout_alignParentLeft="true"
-            android:text="0/20\nN" />
+            android:text="0/20"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:background="@drawable/rounded_textview"/>
 
         <TextView
             android:textColor="@color/progressColor"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:id="@+id/textview_a"
             android:padding="10dp"
             android:textAlignment="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="0/10\nA" />
+            android:text="0/10"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:background="@drawable/rounded_textview"/>
 
         <TextView
             android:textColor="@color/progressColor"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:id="@+id/textview_v"
             android:padding="10dp"
             android:textAlignment="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:text="0/10\nV" />
+            android:text="0/10"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:background="@drawable/rounded_textview"/>
     </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:layout_gravity="bottom" >
 
+        <TextView
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="Type N"
+            android:textColor="@color/foregroundColor"
+            android:textAlignment="center"
+            android:layout_alignParentLeft="true"
+            android:textSize="20sp"/>
+
+        <TextView
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="Type A"
+            android:textColor="@color/foregroundColor"
+            android:textAlignment="center"
+            android:layout_centerInParent="true"
+            android:textSize="20sp"/>
+
+        <TextView
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="Type V"
+            android:textColor="@color/foregroundColor"
+            android:textAlignment="center"
+            android:layout_alignParentRight="true"
+            android:textSize="20sp"/>
+    </RelativeLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -98,54 +142,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="40dp"
         android:text="Get Sample"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="R-R Period (ms):"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:id="@+id/textview_period"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Amplitude (V):"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:id="@+id/textview_amplitude"/>
-
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:layout_gravity="bottom" >
-
-        <Button
-            android:id="@+id/button_classify_n"
-            android:padding="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:text="N" />
-
-        <Button
-            android:id="@+id/button_classify_a"
-            android:padding="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="A" />
-
-        <Button
-            android:id="@+id/button_classify_v"
-            android:padding="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="V" />
-    </RelativeLayout>
 
 
 </LinearLayout>
