--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="foregroundColor">#F2F2F2</color>
     <color name="activeTabColor">#FFFFFF</color>
     <color name="inactiveTabColor">#0A0A0A</color>
-    <color name="progressColor">#FFC107</color>
+    <color name="progressColor">#E91E63</color>
     <color name="completeColor">#8BC34A</color>
 </resources>
