--- a/app/src/main/res/layout/fragment_monitor.xml
+++ b/app/src/main/res/layout/fragment_monitor.xml
@@ -3,12 +3,36 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="@color/backgroundColor">
 
+
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textview_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Monitor"
-        android:textSize="20sp"
-        android:layout_centerInParent="true"
-        android:textColor="@color/foregroundColor"/>
+        android:textSize="32sp"
+        android:textStyle="bold"
+        android:textColor="@color/foregroundColor"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:layout_margin="10dp"/>
+
+    <TextView
+        android:layout_below="@id/textview_title"
+        android:id="@+id/textview_subtitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Abnormal Heart Events"
+        android:textSize="24sp"
+        android:textColor="@color/foregroundColor"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:layout_margin="10dp"/>
+
+    <ListView
+        android:id="@+id/listview_events"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:layout_below="@id/textview_subtitle"/>
 
 </RelativeLayout>
