--- a/app/src/main/res/layout/event_cell.xml
+++ b/app/src/main/res/layout/event_cell.xml
@@ -11,6 +11,18 @@
         android:padding="10dp"/>
 
     <TextView
+        android:id="@+id/textview_label"
+        android:textSize="18dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"
+        android:text="(A)"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"/>
+
+    <TextView
         android:textSize="14dp"
         android:id="@+id/textview_timestamp"
         android:layout_width="wrap_content"
@@ -21,15 +33,5 @@
         android:paddingRight="10dp"
         android:paddingBottom="10dp"/>
 
-    <TextView
-        android:id="@+id/textview_label"
-        android:textSize="18dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
-        android:text="(A)"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"/>
 
 </LinearLayout>
